First code gardening of ObjectEditor class